--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#00ff00" />
+    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Dylan McDonald's portfolio"
